--- a/style.css
+++ b/style.css
@@ -175,3 +175,10 @@ textarea {
   background-color: #fffaf5;
   color: #2f2f2f;
 }
+
+.trenner {
+  height: 10px;
+  background: url('img/trenner.png') no-repeat center center;
+  background-size: contain;
+  margin: 2em 0;
+}
