--- a/style.css
+++ b/style.css
@@ -47,12 +47,6 @@ nav li {
     margin: 0 1em;
 }
 
-nav a {
-    text-decoration: none;
-    color: #2f2f2f;
-    font-weight: bold;
-}
-
 main {
     padding: 2em;
 }
@@ -85,12 +79,6 @@ a {
     color: #a78c6f;
     text-decoration: none;
     font-weight: bold;
-}
-
-a:hover,
-a:focus {
-    color: #715d45;
-    text-decoration: underline;
 }
 
 footer a {
@@ -180,5 +168,108 @@ textarea {
   height: 10px;
   background: url('img/trenner.png') no-repeat center center;
   background-size: contain;
-  margin: 2em 0;
+  margin: 1em 0;
+}
+
+/* Accordion-Grundstruktur */
+.leistungen-container {
+  max-width: 1500px;
+  margin: 2em auto;
+  padding: 0 1em;
+}
+
+.accordion-block {
+  padding: 1em 0;
+}
+
+.accordion-toggle {
+  display: none;
+}
+
+.accordion-title {
+  display: block;
+  font-weight: bold;
+  font-size: 1.1em;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.accordion-title:hover {
+  color: #806040;
+}
+
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease;
+  font-weight: normal;
+  font-size: 1em;
+  line-height: 1.0;
+  color: #333;
+}
+
+.accordion-toggle:checked + .accordion-title + .accordion-content {
+  max-height: 400px;
+  margin-top: 0.5em;
+}
+
+/* Dropdown-Menü */
+.navigation {
+  list-style-type: none;
+  margin: 0;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  background-color: #d8cbb0;
+}
+
+.navigation li {
+  position: relative;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: #2f2f2f;
+  font-weight: bold;
+  padding: 0em;
+}
+
+a:hover,
+a:focus {
+    color: #715d45;
+    text-decoration: underline;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fdfaf6;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  z-index: 100;
+  min-width: 180px;
+  padding: 0.5em 0;
+}
+
+.dropdown-content li {
+  display: block;
+  padding: 0;
+}
+
+.dropdown-content a {
+  display: block;
+  padding: 0.5em 1em;
+  color: #403020;
+  white-space: nowrap;
+}
+
+a:hover,
+a:focus {
+    color: #715d45;
+    text-decoration: underline;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
