--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ textarea {
   height: 10px;
   background: url('img/trenner.png') no-repeat center center;
   background-size: contain;
-  margin: 1em 0;
+  margin: 0em 0;
 }
 
 /* Accordion-Grundstruktur */
@@ -191,12 +191,17 @@ textarea {
   display: block;
   font-weight: bold;
   font-size: 1.1em;
+  padding: 0.4em 0.6em;
   cursor: pointer;
   transition: color 0.3s ease;
 }
 
 .accordion-title:hover {
   color: #806040;
+  background-color: #ede4d5;
+  border-radius: 8px;
+  padding: 0.4em 0.6em;
+  transition: background-color 0.2s ease-in-out;
 }
 
 .accordion-content {
